argocd/utility/coder/ingressroute-wildcard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: coder-wildcard-ingress-route
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostRegxp(`.*\.coder\.homelab\.bowmans\.site`)
      kind: Rule
      services:
      - name: coder
        port: 80
  tls:
    secretName: coder-certificate
